# libgcrypt

./: .gitignore  CMakeLists.txt
cipher/: bithelp.h  bufhelp.h  cipher-ccm.c
cmake/: gcrypt.h  libgcrypt-config.cmake  version.h.in
cmake/sys/: time.h
mpi/: mpi-pow.c
random/: random-csprng.c  random-drbg.c  random-system.c  random.c  rndw32.c
src/: context.c  fips.c  global.c  hwf-x86.c  hwfeatures.c  misc.c  secmem.c  uwp_compat.cpp  visibility.c
